# Authors_tz

./: .dockerignore  .env.docker  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  config.py
app/auth/: manager.py  routers.py  schemas.py
app/author/: routers.py  schemas.py
app/category/: routers.py  schemas.py
app/db/: alembic.ini  auto_migrate.py  conection.py
app/db/migrations/: env.py
app/db/models/: __init__.py  associations.py  author.py  category.py  post.py  tag.py
app/post/: routers.py  schemas.py  services.py
