[tool.poetry]
name = "waifuu-upgrade"
version = "0.1.0"
description = ""
authors = ["DmitroPodolsky <podolskijdmitro1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
